--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
+bcrypt==3.2.0
+cffi==1.15.0
 click==8.1.2
+dnspython==2.2.1
+email-validator==1.1.3
 Flask==2.1.1
+Flask-Bcrypt==1.0.1
 Flask-CKEditor==0.4.6
+flask-mongoengine==1.0.0
+flask-paginate==2022.1.8
 Flask-WTF==1.0.1
+idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
 livereload==2.6.3
 MarkupSafe==2.1.1
+mongoengine==0.24.1
+pycparser==2.21
+pymongo==4.1.0
 six==1.16.0
 tornado==6.1
 Werkzeug==2.1.1
