--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-CKEditor==0.4.6
 flask-mongoengine==1.0.0
 flask-paginate==2022.1.8
 Flask-WTF==1.0.1
+gunicorn==20.1.0
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
@@ -17,6 +18,7 @@ MarkupSafe==2.1.1
 mongoengine==0.24.1
 pycparser==2.21
 pymongo==4.1.0
+python-dotenv==0.20.0
 six==1.16.0
 tornado==6.1
 Werkzeug==2.1.1
